<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TreeSim</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mcgi_builders_text">Builders</string>
    <string name="mcgi_desc_text">Build your own data structures like linked lists and binary trees,
        and see how they work.</string>
    <string name="title_activity_builder_choice">BuilderChoice</string>
    <string name="title_activity_linked_list">LinkedList</string>
    <string name="tap_reminder">Tap screen to choose</string>
    <string name="tap_play_reminder">Tap screen to play</string>
    <string name="ll_title">Linked Lists</string>
    <string name="ll_desc">Find out how basic linked list operations work by building and running your own linked list.</string>
    <string name="bt_title">Binary Trees</string>
    <string name="bt_desc">Make your very own binary tree and learn basic operations for one of the most popular CS data structures.</string>
    <string name="title_activity_linked_list_simulation">LinkedListSimulation</string>
    <string name="desc_ll_search_node">Search Node</string>
    <string name="desc_ll_add_node">Add Node</string>
    <string name="desc_ll_delete_node">Delete Node</string>
    <string name="desc_ll_clear_list">Clear Linked List</string>
    <string name="desc_ll_default_list">Default Linked List</string>

    <string name="desc_ll_search_node_instruction">Choose a value to search:</string>
    <string name="desc_ll_add_node_instruction">Choose the node index and value:</string>
    <string name="desc_ll_delete_node_instruction">Choose the index to be deleted:</string>

    <string name="ll_dialog_search_positive">Search</string>
    <string name="ll_dialog_add_positive">Add Node</string>
    <string name="ll_dialog_delete_positive">Delete Node</string>
    <string name="ll_dialog_cancel">Cancel</string>

    <string name="ll_dialog_add_index_label">Index</string>
    <string name="ll_dialog_add_value_label">Value</string>

    <string name="dialog_ll_search_node">Input search key:</string>
    <string name="title_activity_demo_choice">Choose A Demo</string>
    <string name="mcgv_demos_text">Demos</string>
    <string name="usagetracker_text">Usage Tracker</string>
    <string name="ptt_title">Preorder Tree Traversal</string>
    <string name="ptt_desc">See the preorder traversal of a tree in action.</string>
    <string name="itt_title">Inorder Tree Traversal</string>
    <string name="itt_desc">See the inorder traversal of a tree in action.</string>
    <string name="pott_title">Postorder Tree Traversal</string>
    <string name="pott_desc">See the postorder traversal of a tree in action.</string>
    <string name="mcgv_desc_text">Find demonstrations of algorithms run on common data structures
    like traversals on trees. Just tap play and watch!</string>
    <string name="usagetracker_desc_text">Which simulations have you been looking at the most?
    Check the usage tracker to find out!</string>
    <string name="title_activity_preorder_traversal_simulation">Preorder Tree Traversal</string>
    <string name="title_activity_inorder_traversal_simulation">Inorder Tree Traversal</string>
    <string name="title_activity_postorder_traversal_simulation">Postorder Tree Traversal</string>
    <string name="title_activity_binary_tree_simulation">Binary Tree Builder</string>
    <string name="title_activity_usage_tracker">UsageTracker</string>



</resources>
