<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.pinkplastics.treesim.LinkedListSimulation"
                android:id="@id/ll_dialog_add">

    <TextView
        android:paddingTop="@dimen/abc_text_size_body_1_material"
        android:paddingLeft="@dimen/abc_text_size_body_1_material"
        android:id="@id/ll_dialog_add_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/desc_ll_add_node_instruction">
    </TextView>

    <LinearLayout
        android:paddingTop="@dimen/abc_text_size_body_1_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@id/ll_dialog_add_instructions"
        android:id="@id/ll_dialog_add_number_pickers">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@id/ll_dialog_add_index_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ll_dialog_add_index_label"/>

                <NumberPicker
                    android:id="@id/ll_dialog_add_index_number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/ll_dialog_add_index_label">
                </NumberPicker>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@id/ll_dialog_add_value_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ll_dialog_add_value_label"/>

            <NumberPicker
                android:id="@id/ll_dialog_add_value_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </NumberPicker>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@id/ll_dialog_add_number_pickers">

            <Button
                android:id="@id/ll_dialog_add_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ll_dialog_add_positive"/>

            <Button
                android:id="@id/ll_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ll_dialog_cancel"/>

    </LinearLayout>


</RelativeLayout>

