<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" tools:context="com.pinkplastics.treesim.MCGIScreen"
                android:background="@color/mcgvchoice">


    <ImageView
        android:id="@+id/mcgvlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mcgv_icon"
        android:paddingBottom="30dp"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mcgvlogo"
        android:layout_centerHorizontal="true"
        android:paddingBottom="50dp"
        android:src="@drawable/treesim_header"/>

    <TextView
        android:id="@+id/mcgv_name"
        android:layout_below="@id/mcgvlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/mcgv_demos_text"
        android:textSize="@dimen/page_title_text"/>

    <TextView
        android:id="@+id/mcgv_description"
        android:layout_width="@dimen/page_description_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/mcgv_name"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="@dimen/page_description_text"
        android:text="@string/mcgv_desc_text"/>

    <TextView
        android:id="@+id/mcgv_tapscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mcgv_description"
        android:paddingTop="20sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/tap_reminder_text_size"
        android:text="@string/tap_reminder"/>

</RelativeLayout>
