<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/simulationmenu"
             android:clickable="false"
             tools:context="com.pinkplastics.treesim.PreorderTraversalScreen">

    <ImageView
        android:id="@+id/itt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/demos_inorder_icon"
        android:paddingBottom="30dp"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/itt_icon"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:src="@drawable/demos_choose"/>

    <TextView
        android:id="@+id/itt_screen_name"
        android:layout_below="@id/itt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/itt_title"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/itt_description"
        android:layout_width="@dimen/page_description_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/itt_screen_name"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="@dimen/page_description_text"
        android:text="@string/itt_desc"/>

    <TextView
        android:id="@+id/itt_tapscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itt_description"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/tap_reminder_text_size"
        android:text="@string/tap_reminder"/>

</RelativeLayout>
