<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="false"
             android:background="@color/simulationmenu"
             tools:context="com.pinkplastics.treesim.PreorderTraversalScreen">

    <ImageView
        android:id="@id/builders_bt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/builders_binary_trees_icon"
        android:paddingBottom="30dp"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/builders_bt_icon"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:src="@drawable/builders_choose"/>

    <TextView
        android:id="@id/builders_bt_screen_name"
        android:layout_below="@id/builders_bt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/bt_title"
        android:textSize="@dimen/page_title_text"/>

    <TextView
        android:id="@id/builders_bt_description"
        android:layout_width="@dimen/page_description_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/builders_bt_screen_name"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="@dimen/page_description_text"
        android:text="@string/bt_desc"/>

    <TextView
        android:id="@id/builders_bt_tapscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/builders_bt_description"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/tap_reminder_text_size"
        android:text="@string/tap_reminder"/>

</RelativeLayout>
